--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,5 +86,8 @@
     <string name="sum">сум</string>
     <string name="update_service">Обновление услуги</string>
     <string name="update_janitor">Обновление мойщика</string>
+    <string name="required_field">Обязательное поле для заполнения</string>
+    <string name="comma_dot_field">Поле не должно содержать запятые или точки</string>
+    <string name="telephone_number_size">Телефон номер должен содержать 9 цифр</string>
 
 </resources>
